--- a/.i3/config
+++ b/.i3/config
@@ -197,9 +197,11 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
-	position top
-	mode dock
+    status_command i3status
+
+    position top
+    mode dock
+    font pango:Inconsolata 8
 }
 
 exec xrandr --dpi 160
